# llm-red-team-scanner

./: LICENSE  README.md  SECURITY_REPORT.md  pyproject.toml
reports/: deepseek_deepseek-v4-flash_report.md  deepseek_deepseek-v4-flash_results.json  poolside_laguna-xs-2.1_report.md  poolside_laguna-xs-2.1_results.json  report.md  results.json  results.sarif
scanner/: __init__.py
scanner/cli/: __init__.py  main.py
scanner/cli/commands/: __init__.py
scanner/core/: __init__.py  config.py  exceptions.py  history.py  multi_turn.py  scanner.py  streaming.py
scanner/judge/: __init__.py  heuristic.py  llm_judge.py
scanner/models/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
scanner/patterns/: __init__.py  loader.py
scanner/patterns/data/custom/: example_custom.json
scanner/patterns/data/data_leakage/: advanced_leakage.json  system_prompt_extraction.json
scanner/patterns/data/encoding/: base64_injection.json  unicode_bypass.json
scanner/patterns/data/jailbreak/: advanced_jailbreaks.json  dan_variants.json
scanner/reporting/: __init__.py  console_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
scanner/scoring/: __init__.py  calculator.py
scanner/utils/: __init__.py  logger.py  rate_limiter.py  retry.py  validators.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_extended.py  test_heuristic.py  test_history.py  test_llm_judge.py  test_multi_turn.py  test_patterns.py  test_providers.py  test_reporting.py  test_scanner.py  test_scanner_core.py  test_scoring.py  test_streaming.py  test_streaming_extended.py  test_utils.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
(+4 files in other folders)
