[project]
name = "llm-red-team-scanner"
version = "0.1.0"
description = "CLI tool for automated LLM security testing (Prompt Injection, Jailbreaking, Data Leakage)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kir0029" }
]
keywords = ["llm", "security", "red-team", "jailbreak", "prompt-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.26.0",
    "rich>=15.0.0",
    "pydantic>=2.13.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "openai>=2.44.0",
    "anthropic>=0.116.0",
    "ollama>=0.6.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "ruff>=0.15.0",
]

[project.scripts]
scanner = "scanner.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanner"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
